--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,99 @@ body {
   margin-bottom: 20px;
 }
 
+.eventbox {
+  width: 650px;
+  height: 1050px;
+  background: #000;
+  color: #fff;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%,-50%);
+  box-sizing: border-box;
+  padding: 250px 35px;
+}
+
+.eventbox p{
+  margin: 0;
+  padding: 0;
+  font-weight: bold;
+}
+
+.eventbox input[type="text"]{
+  border: none;
+  border-bottom: 1px solid #fff;
+  background: transparent;
+  outline: none;
+  height: 40px;
+
+}
+
+.eventbox input{
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.createEventBox {
+  width: 500px;
+  height: 1000px;
+  background: #000;
+  color: #fff;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%,-50%);
+  box-sizing: border-box;
+  padding: 300px 50px;
+
+}
+.createEventBox p{
+  margin: 0;
+  padding: 0;
+  font-weight: bold;
+}
+
+.createEventBox input[type="text"]{
+  border: none;
+  border-bottom: 1px solid #fff;
+  background: transparent;
+  outline: none;
+  height: 40px;
+
+}
+
+.createEventBox input{
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.adminLobbyBox {
+  width: 500px;
+  height: 1000px;
+  background: #000;
+  color: #fff;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%,-50%);
+  box-sizing: border-box;
+  padding: 300px 50px;
+
+}
+.adminLobbyBox p{
+  margin: 0;
+  padding: 0;
+  font-weight: bold;
+}
+
+.adminLobbyBox input{
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+
+
+
 h1, h2, h3, h4, h5, h6 {
   margin: 0px 0px 15px;
   color: #ffffff;
