--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,26 @@ body {
   margin-bottom: 20px;
 }
 
+.adminlobbybox{
+  width: 500px;
+  height: 500px;
+  background: #000;
+  color: #fff;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%,-50%);
+  box-sizing: border-box;
+  padding: 70px 35px;
+
+}
+
+.adminlobbybox p{
+  margin: 0;
+  padding: 0;
+  font-weight: bold;
+}
+
 .createEventBox {
   width: 500px;
   height: 1000px;
@@ -173,29 +193,7 @@ body {
   margin-bottom: 20px;
 }
 
-.adminLobbyBox {
-  width: 500px;
-  height: 1000px;
-  background: #000;
-  color: #fff;
-  top: 50%;
-  left: 50%;
-  position: absolute;
-  transform: translate(-50%,-50%);
-  box-sizing: border-box;
-  padding: 300px 50px;
 
-}
-.adminLobbyBox p{
-  margin: 0;
-  padding: 0;
-  font-weight: bold;
-}
-
-.adminLobbyBox input{
-  width: 100%;
-  margin-bottom: 20px;
-}
 
 .paymentbox{
   width: 1000px;
@@ -210,6 +208,7 @@ body {
   padding: 170px 35px;
 
 }
+
 .paymentbox p{
   margin: 0;
   padding: 0;
