--- a/dbms/mysite/myapp/templates/myapp/login.html
+++ b/dbms/mysite/myapp/templates/myapp/login.html
@@ -1,4 +1,5 @@
 {%load staticfiles%}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -6,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>ADMIN LOGIN</title>
+    <title>Title goes here</title>
 
     <!-- Google font -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
@@ -43,8 +44,8 @@
                 <!-- Logo -->
                 <div class="navbar-brand">
                     <a class="logo" href="index.html">
-                        <img class="logo-img" src="{% static 'myapp/img/logo.png'%}" alt="logo">
-                        <img class="logo-alt-img" src="{% static 'myapp/img/logo-alt.png'%}" alt="logo">
+                        <img class="logo-img" src="./img/logo.png" alt="logo">
+                        <img class="logo-alt-img" src="./img/logo-alt.png" alt="logo">
                     </a>
                 </div>
                 <!-- /Logo -->
@@ -70,18 +71,19 @@
     </header>
     <!-- /Header -->
 
-    <!-- /ADMIN LOGIN -->
+    <!-- /LOGIN -->
     <div class="loginbox">
         <img src="avatar.png" class="avatar">
-        <h2 style="color:#dd0a37">ADMIN LOGIN</h2>
-        <form action="adminlobby.html">
+        <h2 style="color:#dd0a37">LOGIN</h2>
+        <form action="eventScreen.html">
             <p>USERNAME</p>
-            <input type="text" name="adminUsername" placeholder="Username">
+            <input type="text" name="" placeholder="Username" required>
             <p>PASSWORD</p>
-            <input type="password" name="adminPassword" placeholder="password">
-            <input type="submit" name="" value="LOGIN" class="button">
-
-
+            <input type="password" name="" placeholder="password">
+            <input type="submit" name="" value="Login" class="button">
+            <a href="createAccount">Create Account</a><br>
+            <a href="adminLogin">Login as Admin</a><br>
+            <a href="managerLogin">Login as Manager</a><br>
         </form>
 
     </div>
@@ -96,15 +98,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
 
 
 
