--- a/dbms/mysite/myapp/templates/myapp/createAccount.html
+++ b/dbms/mysite/myapp/templates/myapp/createAccount.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% load staticfiles %}
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -6,23 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>Title goes here</title>
+    <title>CREATE ACCOUNT</title>
 
     <!-- Google font -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
 
     <!-- Bootstrap -->
-    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" />
+    <link type="text/css" rel="stylesheet" href="{% static 'myapp/css/bootstrap.min.css' %}" />
 
     <!-- Owl Carousel -->
-    <link type="text/css" rel="stylesheet" href="css/owl.carousel.css" />
-    <link type="text/css" rel="stylesheet" href="css/owl.theme.default.css" />
+    <link type="text/css" rel="stylesheet" href="{% static 'myapp/css/owl.carousel.css'  %}" />
+    <link type="text/css" rel="stylesheet" href="{% static 'myapp/css/owl.theme.default.css'%}" />
 
     <!-- Font Awesome Icon -->
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="{% static 'myapp/css/font-awesome.min.css' %}">
 
     <!-- Custom stlylesheet -->
-    <link type="text/css" rel="stylesheet" href="css/style.css" />
+    <link type="text/css" rel="stylesheet" href="{% static 'myapp/css/style.css'%}" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -43,8 +43,8 @@
                 <!-- Logo -->
                 <div class="navbar-brand">
                     <a class="logo" href="index.html">
-                        <img class="logo-img" src="./img/logo.png" alt="logo">
-                        <img class="logo-alt-img" src="./img/logo-alt.png" alt="logo">
+                        <img class="logo-img" src="{% static 'myapp/img/logo.png'%}" alt="logo">
+                        <img class="logo-alt-img" src="{% static 'myapp/img/logo-alt.png'%}" alt="logo">
                     </a>
                 </div>
                 <!-- /Logo -->
@@ -60,7 +60,7 @@
             <!-- Navigation -->
             <nav id="nav">
                 <ul class="main-nav nav navbar-nav navbar-right">
-                    <li><a href="index.html#home">Home</a></li>
+                    <li><a href="/">Home</a></li><!-- <li><a href="index">Home</a></li> -->
                 </ul>
             </nav>
             <!-- /Navigation -->
@@ -72,7 +72,7 @@
 
     <!-- /LOGIN -->
     <div class="createaccount">
-        <img src="avatar.png" class="avatar">
+        <img src="{%static 'myapp/img/avatar.png'%}" class="avatar">
         <h2 style="color:#dd0a37">SIGN UP</h2>
         <form>
             <p>FIRST NAME</p>
@@ -90,14 +90,14 @@
             <p>CONTACT</p>
             <input type="text" name="" required>
             <input type="submit" name="" value="SUBMIT" class="button">
-            
-            
+
+
         </form>
 
     </div>
 
 
-   
+
 
     <div class="section">
         <div class="container">
@@ -107,17 +107,17 @@
         </div>
     </div>
 
-    
 
-    
 
-    
 
-                
 
-          
 
-    
+
+
+
+
+
+
 
 </body>
 
