--- a/dbms/mysite/myapp/templates/myapp/index.html
+++ b/dbms/mysite/myapp/templates/myapp/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% load staticfiles%}
 <html lang="en">
 <head>
 	<meta charset="utf-8">
@@ -6,23 +6,23 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-	<title>Title comes here</title>
+	<title>INDEX</title>
 
 	<!-- Google font -->
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
 
 	<!-- Bootstrap -->
-	<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" />
+	<link type="text/css" rel="stylesheet" href="{% static 'myapp/css/bootstrap.min.css' %}" />
 
 	<!-- Owl Carousel -->
-	<link type="text/css" rel="stylesheet" href="css/owl.carousel.css" />
-	<link type="text/css" rel="stylesheet" href="css/owl.theme.default.css" />
+	<link type="text/css" rel="stylesheet" href="{% static 'myapp/css/owl.carousel.css'  %}" />
+	<link type="text/css" rel="stylesheet" href="{% static 'myapp/css/owl.theme.default.css'%}" />
 
 	<!-- Font Awesome Icon -->
-	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="{% static 'myapp/css/font-awesome.min.css' %}">
 
 	<!-- Custom stlylesheet -->
-	<link type="text/css" rel="stylesheet" href="css/style.css" />
+	<link type="text/css" rel="stylesheet" href="{% static 'myapp/css/style.css'%}" />
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -42,8 +42,8 @@
 				<!-- Logo -->
 				<div class="navbar-brand">
 					<a class="logo" href="index.html">
-						<img class="logo-img" src="./img/logo.png" alt="logo">
-						<img class="logo-alt-img" src="./img/logo-alt.png" alt="logo">
+						<img class="logo-img" src="{% static 'myapp/img/logo.png'%}" alt="logo">
+						<img class="logo-alt-img" src="{% static 'myapp/img/logo-alt.png'%}" alt="logo">
 					</a>
 				</div>
 				<!-- /Logo -->
@@ -74,7 +74,9 @@
 	<!-- Home -->
 	<div id="home">
 		<!-- background image -->
-		<div class="section-bg" style="background-image:url(./img/background03.jpg)" data-stellar-background-ratio="0.5"></div>
+		<div class="section-bg">
+    <img src="{%static 'myapp/img/background03.jpg' %}" data-stellar-background-ratio="0.5";/>
+		</div>
 		<!-- /background image -->
 
 		<!-- home wrapper -->
@@ -88,7 +90,7 @@
 						<div class="home-content">
 							<h1>Book your favourite shows</h1>
 							<h4 class="lead">The one stop to book your tickets to your favourite movies.</h4>
-							<a href="login.html" class="main-btn">Buy Ticket</a>
+							<a href="login" class="main-btn">Buy Ticket</a>
 						</div>
 					</div>
 					<!-- /home content -->
@@ -116,7 +118,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<!-- about content -->
 					<div class="about-content">
-						<p>Abour us content comes here</p>
+						<p>About us content comes here</p>
 					</div>
 					<!-- /about content -->
 
