--- a/dbms/mysite/myapp/templates/myapp/login.html
+++ b/dbms/mysite/myapp/templates/myapp/login.html
@@ -86,7 +86,7 @@
             <input type="submit" name="" value="Login" class="button">
             <a href="signup">Create Account</a><br>
             <!-- <a href=sample>createaccount</a><br> -->
-            <a href="adminLogin">Login as Admin</a><br>
+            <a href="managerRegister">Create Manager Account</a><br>
             <a href="managerLogin">Login as Manager</a><br>
         </form>
 
