--- a/dbms/mysite/myapp/templates/myapp/login.html
+++ b/dbms/mysite/myapp/templates/myapp/login.html
@@ -35,42 +35,41 @@
 
 <body>
 
-    <!-- Header -->
-    <header id="header">
-        <!-- container -->
-        <div class="container">
-            <!-- navbar header -->
-            <div class="navbar-header">
-                <!-- Logo -->
-                <div class="navbar-brand">
-                    <a class="logo" href="index.html">
-                        <img class="logo-img" src="./img/logo.png" alt="logo">
-                        <img class="logo-alt-img" src="./img/logo-alt.png" alt="logo">
-                    </a>
-                </div>
-                <!-- /Logo -->
+  <!-- Header -->
+  <header id="header">
+      <!-- container -->
+      <div class="container">
+          <!-- navbar header -->
+          <div class="navbar-header">
+              <!-- Logo -->
+              <div class="navbar-brand">
+                  <a class="logo" href="index.html">
+                      <img class="logo-img" src="{% static 'myapp/img/logo.png'%}" alt="logo">
+                      <img class="logo-alt-img" src="{% static 'myapp/img/logo-alt.png'%}" alt="logo">
+                  </a>
+              </div>
+              <!-- /Logo -->
 
-                <!-- Mobile toggle -->
-                <button class="navbar-toggle">
-                        <i class="fa fa-bars"></i>
-                    </button>
-                <!-- /Mobile toggle -->
-            </div>
-            <!-- /navbar header -->
+              <!-- Mobile toggle -->
+              <button class="navbar-toggle">
+                      <i class="fa fa-bars"></i>
+                  </button>
+              <!-- /Mobile toggle -->
+          </div>
+          <!-- /navbar header -->
 
-            <!-- Navigation -->
-            <nav id="nav">
-                <ul class="main-nav nav navbar-nav navbar-right">
-                    <li><a href="/">Home</a></li>
-                </ul>
-            </nav>
-            <!-- /Navigation -->
+          <!-- Navigation -->
+          <nav id="nav">
+              <ul class="main-nav nav navbar-nav navbar-right">
+                  <li><a href="/">HOME</a></li>
+              </ul>
+          </nav>
+          <!-- /Navigation -->
 
-        </div>
-        <!-- /container -->
-    </header>
-    <!-- /Header -->
-
+      </div>
+      <!-- /container -->
+  </header>
+  <!-- /Header -->
     <!-- /LOGIN -->
     <div class="loginbox">
         <img src="avatar.png" class="avatar">
