--- a/dbms/mysite/myapp/templates/myapp/createEvent.html
+++ b/dbms/mysite/myapp/templates/myapp/createEvent.html
@@ -60,7 +60,7 @@
             <!-- Navigation -->
             <nav id="nav">
                 <ul class="main-nav nav navbar-nav navbar-right">
-                    <li><a href="/">Home</a></li>
+                    <li><a href="logout/">LOGOUT</a></li>
                 </ul>
             </nav>
             <!-- /Navigation -->
@@ -72,7 +72,7 @@
 
 
     <!-- /CREATE EVENT -->
-    <div class="createEventBox">
+    <div class="loginbox">
 
         <img src="{% static 'myapp/img/avatar.png'%}" class="avatar">
         <h2 style="color:#dd0a37">CREATE EVENT</h2>
