--- a/dbms/mysite/myapp/templates/myapp/managerLogin.html
+++ b/dbms/mysite/myapp/templates/myapp/managerLogin.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>Title goes here</title>
+    <title>ManagerLogin</title>
 
     <!-- Google font -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
