--- a/dbms/mysite/myapp/templates/myapp/createAccount.html
+++ b/dbms/mysite/myapp/templates/myapp/createAccount.html
@@ -77,7 +77,7 @@
     <form class="" action="" method="post">
         {% csrf_token %}
         {{ form }}
-        <input type="submit" name="eventScreen.html" value="SUBMIT" class="button">
+        <input type="submit" name="eventScreen.html" value="SIGNUP" class="button">
     </form>
         <!-- <p>NAME</p>
         <input type="text" name="cus_name" placeholder="John Doe" required>
