--- a/dbms/mysite/myapp/templates/myapp/managerRegister.html
+++ b/dbms/mysite/myapp/templates/myapp/managerRegister.html
@@ -74,7 +74,7 @@
     <!-- /LOGIN -->
     <div class="createaccount">
         <img src="avatar.png" class="avatar">
-        <h2 style="color:#dd0a37">LOGIN</h2>
+        <h2 style="color:#dd0a37">MANAGER SIGNUP</h2>
       <form  method="post">
           <!-- eventScreen.html      -->
               {% csrf_token %}
@@ -83,7 +83,7 @@
             <input type="text" name="" placeholder="Username" required>
             <p>PASSWORD</p>
             <input type="password" name="" placeholder="password"> -->
-            <input type="submit" name="" value="Login" class="button">
+            <input type="submit" name="" value="SIGNUP" class="button">
 
             <!-- <a href=sample>createaccount</a><br> -->
 
